phancie-lang/tests/if/if_error_snapshot.txt
ERROR: Can't pass ByIn argument to a param with ValMode
        let x = 2;
                ^
